<resources>
    <string name="app_name">MVP</string>
    <string name="counter_one">Счетчик 1</string>
    <string name="counter_two">Счетчик 2</string>
    <string name="counter_three">Счетчик 3</string>
    <string name="convert">convert</string>
    <string name="dismiss">dismiss</string>
    <string name="back">back</string>
    <string name="image_fragment">image fragment</string>
    <string name="delete">delete</string>
    <string name="jpeg">JPEG</string>
    <string name="png">PNG</string>
    <string name="cancelled_by_user">cancelled by user</string>
    <string name="repo_name">Имя репозитория</string>
    <string name="repo_forks">Веток</string>
    <string name="repo_watchers">Подписчики</string>
</resources>
